--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="form-container sign-in">
             <form>
-                <h1>Sign In</h1>
+                <h1>SIGN IN</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
